--- a/test/dummy/config/infold/product.yml
+++ b/test/dummy/config/infold/product.yml
@@ -29,7 +29,7 @@ model:
     image:
       kind: image
 app:
-  title: 商品管理
+  title: Product
   index:
     conditions:
       - id:
@@ -69,7 +69,7 @@ app:
     fields:
       - title
       - description:
-          kind: textarea
+          kind: text_area
       - category:
           kind: radio
       - price
