--- a/test/dummy/config/infold/product.yml
+++ b/test/dummy/config/infold/product.yml
@@ -56,6 +56,9 @@ app:
         kind: desc
     csv:
       fields:
+        - id
+        - title
+        - category
   show:
     fields:
       - title
