--- a/test/dummy/config/infold/product.yml
+++ b/test/dummy/config/infold/product.yml
@@ -5,6 +5,7 @@ model:
     category:
       - presence
     price:
+      - presence
       - numericality:
           greater_than_or_equal_to: 0
     stock:
